--- a/assets/css/extended/home.css
+++ b/assets/css/extended/home.css
@@ -298,6 +298,36 @@
   position: relative;
 }
 
+.home-card.has-media .card-link {
+  padding: 0;
+}
+
+.card-media {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+  overflow: hidden;
+  background: #f1f1f1;
+}
+
+.card-media img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.home-card.has-media .card-meta,
+.home-card.has-media .card-title,
+.home-card.has-media .card-summary,
+.home-card.has-media .card-tags {
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
+}
+
+.home-card.has-media .card-meta {
+  padding-top: 1.4rem;
+}
+
 .home-card::before {
   content: "";
   position: absolute;
