--- a/assets/css/extended/home.css
+++ b/assets/css/extended/home.css
@@ -216,7 +216,7 @@
   max-width: 1120px;
   margin: 0 auto 2rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .category-dropdown {
