--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -3,13 +3,17 @@
     <div class="custom-footer__inner">
         <div class="custom-footer__brand">
             <span>Conecte-se</span>
-            <a href="https://www.linkedin.com/in/davidferreira21/" rel="noopener" target="_blank">LinkedIn</a>
+            <a class="custom-footer__link" href="https://www.linkedin.com/in/davidferreirams/" rel="noopener" target="_blank">
+                <span class="custom-footer__icon" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" role="img" aria-label="LinkedIn">
+                        <path d="M20.45 20.45H17V14.86c0-1.33-.02-3.04-1.85-3.04-1.85 0-2.13 1.45-2.13 2.95v5.68H9.56V9h3.32v1.56h.05c.46-.88 1.58-1.8 3.26-1.8 3.49 0 4.13 2.3 4.13 5.29v6.4ZM5.34 7.43a1.94 1.94 0 1 1 0-3.88 1.94 1.94 0 0 1 0 3.88ZM6.95 20.45H3.72V9H6.95v11.45Z" />
+                    </svg>
+                </span>
+                LinkedIn
+            </a>
         </div>
-        <nav class="custom-footer__nav" aria-label="Categorias">
-            <span>Categorias</span>
-            <a href="{{ "posts/?cat=arquitetura" | relURL }}">Arquitetura</a>
-            <a href="{{ "posts/?cat=cloud" | relURL }}">Cloud</a>
-            <a href="{{ "posts/?cat=devops" | relURL }}">DevOps</a>
+        <nav class="custom-footer__nav" aria-label="Sobre">
+            <a class="custom-footer__link" href="{{ "sobre/" | relURL }}">Sobre mim</a>
         </nav>
     </div>
 </div>
